--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,10 @@
       "@phpstan-analyse"
     ],
     "phpstan-analyse": "vendor/bin/phpstan analyse -c scripts/phpstan/config.neon",
+    "phpstan-baseline": [
+      "@phpstan-clear",
+      "@phpstan-analyse --generate-baseline scripts/phpstan/baseline.neon --allow-empty-baseline"
+    ],
     "phpstan-clear": "vendor/bin/phpstan clear-result-cache -c scripts/phpstan/config.neon",
     "phpunit": "vendor/bin/phpunit"
   },
