--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
     ],
     "coverage": "vendor/bin/pccb_clover_compare -c report/coverage/clover.xml -vv",
     "cs-fixer-check": "vendor/bin/php-cs-fixer fix -vv --dry-run",
-    "phpstan": "vendor/bin/phpstan analyse",
+    "phpstan": "vendor/bin/phpstan analyse -c scripts/phpstan/config.neon",
     "phpunit": "vendor/bin/phpunit"
   },
   "suggest": {
