--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     "phpstan/phpstan": "^1.8",
     "phpstan/phpstan-phpunit": "^1.3",
     "phpstan/phpstan-symfony": "^1.2",
-    "phpunit/phpunit": "^9.5",
+    "phpunit/phpunit": "^7.5|^9.5",
     "symfony/dotenv": "^3.4|^4.0|^5.0|^6.0",
     "symfony/framework-bundle": "^3.4|^4.0|^5.0|^6.0",
     "symfony/translation": "^3.4|^4.0|^5.0|^6.0"
