--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     "php": "^7.4|^8.0",
     "ext-json": "*",
     "google/cloud-translate": "^1.10",
-    "symfony/config": "^3.4|^4.0|^5.0|^6.0",
-    "symfony/console": "^3.4|^4.0|^5.0|^6.0",
-    "symfony/dependency-injection": "^3.4|^4.0|^5.0|^6.0",
-    "symfony/filesystem": "^3.4|^4.0|^5.0|^6.0",
-    "symfony/finder": "^3.4|^4.0|^5.0|^6.0",
-    "symfony/http-kernel": "^3.4|^4.0|^5.0|^6.0",
+    "symfony/config": "^3.4|^4.0|^5.0|^6.0|^7.0",
+    "symfony/console": "^3.4|^4.0|^5.0|^6.0|^7.0",
+    "symfony/dependency-injection": "^3.4|^4.0|^5.0|^6.0|^7.0",
+    "symfony/filesystem": "^3.4|^4.0|^5.0|^6.0|^7.0",
+    "symfony/finder": "^3.4|^4.0|^5.0|^6.0|^7.0",
+    "symfony/http-kernel": "^3.4|^4.0|^5.0|^6.0|^7.0",
     "symfony/translation-contracts": "^1.1|^2.0|^3.0",
-    "symfony/yaml": "^3.4|^4.0|^5.0|^6.0"
+    "symfony/yaml": "^3.4|^4.0|^5.0|^6.0|^7.0"
   },
   "config": {
     "sort-packages": true,
@@ -43,9 +43,9 @@
     "phpstan/phpstan-phpunit": "^1.3",
     "phpstan/phpstan-symfony": "^1.2",
     "phpunit/phpunit": "^7.5|^9.5",
-    "symfony/dotenv": "^3.4|^4.0|^5.0|^6.0",
-    "symfony/framework-bundle": "^3.4|^4.0|^5.0|^6.0",
-    "symfony/translation": "^3.4|^4.0|^5.0|^6.0"
+    "symfony/dotenv": "^3.4|^4.0|^5.0|^6.0|^7.0",
+    "symfony/framework-bundle": "^3.4|^4.0|^5.0|^6.0|^7.0",
+    "symfony/translation": "^3.4|^4.0|^5.0|^6.0|^7.0"
   },
   "scripts": {
     "app-cache-refresh": "rm -rf var/cache && XDEBUG_MODE=off tests/console cache:clear --env=test",
