--- a/.github/workflows/automated_testing.yaml
+++ b/.github/workflows/automated_testing.yaml
@@ -23,6 +23,8 @@ jobs:
             lock-version: '6.0'
           - php-version: '8.1'
             lock-version: '6.4'
+          - php-version: '8.2'
+            lock-version: '7.0'
 
     steps:
       - uses: 'shivammathur/setup-php@v2'
